small fix to fix layout bug on small-mid size screen widths

--- a/components/_patterns/00-base/global/base/_base.scss
+++ b/components/_patterns/00-base/global/base/_base.scss
@@ -59,3 +59,8 @@ body {
     }
   }
 }
+
+.dialog-off-canvas-main-canvas {
+  //keeps layout-container filling the screen as screen size is reduced
+  overflow: auto;
+}
